# MurderManor

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md
MurderManor/Assets/Animations/: Arthur.controller  Bush.controller  Candles.controller  lamp_pillar.controller
MurderManor/Assets/Materials/: Light_mtl.mat  Main Material transparent.mat  Main Material.mat  Player.physicMaterial  Rain.mat
MurderManor/Assets/Models/: Props and stuff.ma  arthur_character_01.fbx  barrier_01.fbx  barrier_02.fbx  barrier_pillar_01.fbx  bif_door_02.fbx  big_door_01.fbx  bush_01.fbx  carpet_01.fbx  doily_01.fbx  door_01.fbx  door_02.fbx  elevated_floor_01.fbx  foor_tile_01.fbx  foor_tile_02.fbx  foor_tile_03fbx.fbx  frame_01.fbx  gramophone_01.fbx  horloge_01.fbx  key_01.fbx  lamp_pillar_01.fbx  poof_sphere_01.fbx  short_wall_01.fbx  small_table_01.fbx  small_table_02.fbx  staircase_barrier_01.fbx  stairs_01.fbx  wall_01.fbx  wall_02.fbx  wall_03.fbx  wall_04.fbx  wall_candles_01.fbx  wall_corner_01.fbx  window_01.fbx  window_02.fbx  yellow_wall_01.fbx
MurderManor/Assets/Prefabs/: Character Arthur 01.prefab  Environment.prefab  EnvironmentNew.prefab  bif_door_02.prefab  bush_01.prefab  door_02.prefab  findable_object.prefab  wall_01.prefab  wall_02.prefab  wall_candles_01.prefab
MurderManor/Assets/Scenes/: MainScene.unity  (+2 more)
MurderManor/ProjectSettings/: InputManager.asset  ProjectSettings.asset  TagManager.asset
server/: Cargo.toml
server/proto/: game.proto
server/src/: api.rs  cli.rs  find_game.rs  mqtt.rs  objects.rs  players.rs  proto.rs  scoreboard.rs  server.rs
(+16 files in other folders)
