[package]
name = "server"
version = "0.1.0"
authors = ["Clément Decoodt <clement@decoodt.eu>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.1"
prost = "0.6"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
paho-mqtt = { version = "0.6" }
rand = "0.7.3"

[build-dependencies]
tonic-build = "0.1"
